<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingTop="45dp"
    android:paddingEnd="5dp"
    android:paddingBottom="5dp"
    tools:context=".Senales.NewSenal">

    <TextView
        android:id="@+id/tituloPopUP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nueva_senal"
        android:textAlignment="gravity"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/solicitudUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:text="@string/solicitud_url"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/urlEntregada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/solicitudDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:text="@string/solicitud_Descripcion"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/descripcionEntregada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelarSenal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancelar_nueva_senal" />

        <Button
            android:id="@+id/btnAnadirSenal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_anadir_senal" />
    </LinearLayout>

</LinearLayout>