<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingStart="10sp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:padding="10sp"
            android:text="@string/idioma_seleccionar"
            android:textColor="@color/Morado_HeaderPCops" />

        <ImageButton
            android:id="@+id/ib_close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:paddingBottom="10dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="#ffffff"
        android:paddingStart="10sp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rg_grupo"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal"
            android:weightSum="12">

            <ImageView
                android:id="@+id/imgBanderaEspana"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/bandera_espana" />

            <RadioButton
                android:id="@+id/radio_castellano"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/idioma_castellano"
                />

            <ImageView
                android:id="@+id/imgIkurrina"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ikurrina" />

            <RadioButton
                android:id="@+id/radio_euskera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/idioma_euskera" />

            <ImageView
                android:id="@+id/imgBanderaAmerica"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/america" />

            <RadioButton
                android:id="@+id/radio_ingles"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/idioma_ingles" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>